Closed
Bug 1255217
Opened 9 years ago
Closed 9 years ago
nightly 20160309, --disable webrtc compile fail, dom/media/webrtc/MediaEngineCameraVideoSource.h:15:53: fatal error: webrtc/video_engine/include/vie_capture.h: No such file or directory
Categories
(Core :: WebRTC, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla48
| Tracking | Status | |
|---|---|---|
| firefox47 | --- | unaffected |
| firefox48 | --- | fixed |
People
(Reporter: u532768, Assigned: jesup)
References
Details
(Keywords: regression)
Attachments
(5 files)
User Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:45.0) Gecko/20100101 Firefox/45.0
Build ID: 20160304160105
Steps to reproduce:
Pulled latest hg updates, tried to compile nightly. There were several changes to allowed configure options. I have webrtc disabled.
Actual results:
33:34.87 In file included from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/media/Unified_cpp_dom_media0.cpp:56:0:
33:34.87 /mnt/to_archive/accum/src/mozilla-central/dom/media/AudioStream.cpp: In member function ‘void mozilla::AudioStream::GetUnprocessed(mozilla::AudioBufferWriter&)’:
33:34.87 Warning: -Wunused-value in /mnt/to_archive/accum/src/mozilla-central/dom/media/AudioStream.cpp: value computed is not used
33:34.87 /mnt/to_archive/accum/src/mozilla-central/dom/media/AudioStream.cpp:591:5: warning: value computed is not used [-Wunused-value]
33:34.87 NS_WARN_IF(mTimeStretcher->numUnprocessedSamples() > 0);
33:34.87 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
33:34.90 Unified_cpp_dom_camera0.o
33:35.17 In file included from /mnt/to_archive/accum/src/mozilla-central/dom/media/webrtc/MediaEngineWebRTC.h:26:0,
33:35.17 from /mnt/to_archive/accum/src/mozilla-central/dom/media/GraphDriver.cpp:12,
33:35.17 from /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp:20:
33:35.17 /mnt/to_archive/accum/src/mozilla-central/dom/media/webrtc/MediaEngineCameraVideoSource.h:15:53: fatal error: webrtc/video_engine/include/vie_capture.h: No such file or directory
33:35.17 #include "webrtc/video_engine/include/vie_capture.h"
33:35.17 ^
33:35.17 compilation terminated.
33:35.18
33:35.18 In the directory /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/media
33:35.18 The following command failed to execute properly:
33:35.18 /usr/bin/ccache c++ -o Unified_cpp_dom_media1.o -c -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dist/stl_wrappers -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dist/system_wrappers -include /mnt/to_archive/accum/src/mozilla-central/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DMOZILLA_INTERNAL_API -DWEBRTC_POSIX -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/mnt/to_archive/accum/src/mozilla-central/dom/media -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/media -I/mnt/to_archive/accum/src/mozilla-central/caps -I/mnt/to_archive/accum/src/mozilla-central/dom/base -I/mnt/to_archive/accum/src/mozilla-central/dom/camera -I/mnt/to_archive/accum/src/mozilla-central/layout/generic -I/mnt/to_archive/accum/src/mozilla-central/layout/xul -I/mnt/to_archive/accum/src/mozilla-central/netwerk/base -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/ipc/ipdl/_ipdlheaders -I/mnt/to_archive/accum/src/mozilla-central/ipc/chromium/src -I/mnt/to_archive/accum/src/mozilla-central/ipc/glue -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dist/include -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dist/include/nspr -I/mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/mozilla-config.h -MD -MP -MF .deps/Unified_cpp_dom_media1.o.pp -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wwrite-strings -Wc++14-compat -Wunreachable-code -Wno-invalid-offsetof -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -fno-exceptions -fno-strict-aliasing -fno-rtti -fno-exceptions -fno-math-errno -std=gnu++0x -pthread -pipe -g -freorder-blocks -Os -fomit-frame-pointer -Wno-error=attributes /mnt/to_archive/accum/src/mozilla-central/obj-x86_64-unknown-linux-gnu/dom/media/Unified_cpp_dom_media1.cpp
33:35.18 /mnt/to_archive/accum/src/mozilla-central/config/rules.mk:964: recipe for target 'Unified_cpp_dom_media1.o' failed
33:35.18 gmake[5]: *** [Unified_cpp_dom_media1.o] Error 1
33:35.18 /mnt/to_archive/accum/src/mozilla-central/config/recurse.mk:71: recipe for target 'dom/media/target' failed
33:35.18 gmake[4]: *** [dom/media/target] Error 2
33:35.18 gmake[4]: *** Waiting for unfinished jobs....
Expected results:
PASS
PASS
Can you please change the Browse button to see hidden files. There is no way to currently attach a hidden file, since it doesn't show them.
These are the configuration options in effect for the failed compile.
nightly compiles successfully if I don't disable webrtc. Because I'm using gcc 6, I used optimize of O0 as well.
| Comment hidden (off-topic) |
Updated•9 years ago
|
Component: Untriaged → WebRTC
Product: Firefox → Core
| Assignee | ||
Updated•9 years ago
|
Status: UNCONFIRMED → NEW
Rank: 21
Ever confirmed: true
Priority: -- → P2
| Comment hidden (off-topic) |
Comment 5•9 years ago
|
||
This bug is more or less the same principal problem as here:
https://bugzilla.mozilla.org/show_bug.cgi?id=1200477#c8
| Comment hidden (off-topic) |
| Comment hidden (off-topic) |
| Comment hidden (off-topic) |
| Comment hidden (offtopic) |
| Comment hidden (offtopic) |
| Comment hidden (off-topic) |
Comment 12•9 years ago
|
||
Looks like this is a regression from bug 1250934 -- that's where we gave GraphDriver.cpp an #include for this webrtc/MediaEngineWebRTC.h file (which then tries to #include further webrtc stuff & fails because webrtc is disabled).
Blocks: 1250934
Keywords: regression
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → rjesup
Rank: 21 → 15
status-firefox47:
--- → unaffected
status-firefox48:
--- → affected
Priority: P2 → P1
Comment 13•9 years ago
|
||
FWIW, here's a patch that gets me past this build error (basically just #ifdeffing out the webrtc-specific parts of bug 1250934).
Comment 14•9 years ago
|
||
(Tagging jesup to take a look, since this is a regression from his patch in bug 1250934.)
Flags: needinfo?(rjesup)
| Assignee | ||
Comment 15•9 years ago
|
||
MozReview-Commit-ID: 1XtSXlhWn37
Attachment #8730700 -
Flags: review?(padenot)
Updated•9 years ago
|
Attachment #8730700 -
Flags: review?(padenot) → review+
Comment 16•9 years ago
|
||
Comment 17•9 years ago
|
||
Backed out for reftest failures R(C) in crashtests/876024-2.html
Backout: https://hg.mozilla.org/integration/mozilla-inbound/rev/b82d97221ce4
Push with failures: https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&revision=d2144af8a3fe
Failure log: https://treeherder.mozilla.org/logviewer.html#?job_id=23804253&repo=mozilla-inbound
09:38:23 INFO - REFTEST TEST-START | file:///builds/slave/test/build/tests/reftest/tests/dom/media/test/crashtests/876024-2.html
09:38:23 INFO - REFTEST TEST-LOAD | file:///builds/slave/test/build/tests/reftest/tests/dom/media/test/crashtests/876024-2.html | 415 / 3012 (13%)
09:38:23 INFO - ++DOMWINDOW == 52 (0x9d175000) [pid = 20333] [serial = 1081] [outer = 0x9379a000]
09:38:23 INFO - JavaScript error: file:///builds/slave/test/build/tests/reftest/tests/dom/media/test/crashtests/876024-2.html, line 11: NotSupportedError: Operation is not supported
09:38:23 INFO - Assertion failure: mDriver->mGraphImpl->MessagesQueued() (Don't start a graph without messages queued.), at /builds/slave/m-in-lx-d-00000000000000000000/build/src/dom/media/GraphDriver.cpp:215
09:38:23 INFO - [20333] WARNING: 'mThread == PR_GetCurrentThread()', file /builds/slave/m-in-lx-d-00000000000000000000/build/src/xpcom/threads/nsThread.cpp, line 713
09:38:23 INFO - [20333] WARNING: NS_ENSURE_TRUE(context) failed: file /builds/slave/m-in-lx-d-00000000000000000000/build/src/xpcom/threads/nsThread.cpp, line 805
09:38:23 INFO - #01: mozilla::MediaStreamGraphInitThreadRunnable::Run [dom/media/GraphDriver.cpp:215]
09:38:23 INFO - #02: nsThread::ProcessNextEvent [xpcom/threads/nsThread.cpp:994]
09:38:23 INFO - #03: NS_ProcessNextEvent [xpcom/glue/nsThreadUtils.cpp:297]
09:38:23 INFO - #04: mozilla::ipc::MessagePumpForNonMainThreads::Run [ipc/glue/MessagePump.cpp:333]
09:38:23 INFO - #05: MessageLoop::RunInternal [ipc/chromium/src/base/message_loop.cc:234]
09:38:23 INFO - #06: MessageLoop::Run [ipc/chromium/src/base/message_loop.cc:520]
09:38:23 INFO - #07: nsThread::ThreadFunc [xpcom/threads/nsThread.cpp:398]
09:38:23 INFO - #08: _pt_root [nsprpub/pr/src/pthreads/ptthread.c:219]
09:38:23 INFO - #09: libpthread.so.0 + 0x6d4c
09:38:23 INFO - ExceptionHandler::WaitForContinueSignal waiting for continue signal...
09:38:23 INFO - ExceptionHandler::GenerateDump cloned child 20441
09:38:23 INFO - ExceptionHandler::SendContinueSignalToChild sent continue signal to child
09:38:24 WARNING - TEST-UNEXPECTED-FAIL | file:///builds/slave/test/build/tests/reftest/tests/dom/media/test/crashtests/876024-2.html | application terminated with exit code 11
09:38:24 INFO - REFTEST INFO | Copy/paste: /builds/slave/test/build/linux32-minidump_stackwalk /tmp/tmp7Po4n0.mozrunner/minidumps/067e2f29-ca1f-f05c-0eb253ff-5a5ac6fd.dmp /builds/slave/test/build/symbols
09:38:40 INFO - REFTEST INFO | Saved minidump as /builds/slave/test/build/blobber_upload_dir/067e2f29-ca1f-f05c-0eb253ff-5a5ac6fd.dmp
09:38:40 INFO - REFTEST INFO | Saved app info as /builds/slave/test/build/blobber_upload_dir/067e2f29-ca1f-f05c-0eb253ff-5a5ac6fd.extra
09:38:40 ERROR - REFTEST PROCESS-CRASH | file:///builds/slave/test/build/tests/reftest/tests/dom/media/test/crashtests/876024-2.html | application crashed [@ mozilla::MediaStreamGraphInitThreadRunnable::Run]
09:38:40 INFO - Crash dump filename: /tmp/tmp7Po4n0.mozrunner/minidumps/067e2f29-ca1f-f05c-0eb253ff-5a5ac6fd.dmp
09:38:40 INFO - Operating system: Linux
09:38:40 INFO - 0.0.0 Linux 3.2.0-76-generic-pae #111-Ubuntu SMP Tue Jan 13 22:34:29 UTC 2015 i686
09:38:40 INFO - CPU: x86
09:38:40 INFO - GenuineIntel family 6 model 62 stepping 4
09:38:40 INFO - 1 CPU
09:38:40 INFO - Crash reason: SIGSEGV
09:38:40 INFO - Crash address: 0x0
09:38:40 INFO - Process uptime: not available
09:38:40 INFO - Thread 60 (crashed)
09:38:40 INFO - 0 libxul.so!mozilla::MediaStreamGraphInitThreadRunnable::Run [GraphDriver.cpp:d2144af8a3fe : 215 + 0x2c]
09:38:40 INFO - eip = 0xb21917ad esp = 0x85bfa0d0 ebp = 0x85bfa118 ebx = 0xb609308c
09:38:40 INFO - esi = 0x92c19640 edi = 0x00000000 eax = 0xb41708cd ecx = 0xb609308c
09:38:40 INFO - edx = 0x00000000 efl = 0x00010292
09:38:40 INFO - Found by: given as instruction pointer in context
09:38:40 INFO - 1 libxul.so!nsThread::ProcessNextEvent [nsThread.cpp:d2144af8a3fe : 994 + 0x14]
09:38:40 INFO - eip = 0xb0bef405 esp = 0x85bfa120 ebp = 0x85bfa198 ebx = 0xb609308c
09:38:40 INFO - esi = 0x95e47240 edi = 0xb6097530
09:38:40 INFO - Found by: call frame info
09:38:40 INFO - 2 libxul.so!NS_ProcessNextEvent [nsThreadUtils.cpp:d2144af8a3fe : 297 + 0x10]
09:38:40 INFO - eip = 0xb0c17faf esp = 0x85bfa1a0 ebp = 0x85bfa1d8 ebx = 0xb609308c
09:38:40 INFO - esi = 0x92a06340 edi = 0x93aaeec0
09:38:40 INFO - Found by: call frame info
09:38:40 INFO - 3 libxul.so!mozilla::ipc::MessagePumpForNonMainThreads::Run [MessagePump.cpp:d2144af8a3fe : 332 + 0xc]
09:38:40 INFO - eip = 0xb0ee7473 esp = 0x85bfa1e0 ebp = 0x85bfa228 ebx = 0xb609308c
09:38:40 INFO - esi = 0x92a06340 edi = 0x93aaeec0
09:38:40 INFO - Found by: call frame info
09:38:40 INFO - 4 libxul.so!MessageLoop::RunInternal [message_loop.cc:d2144af8a3fe : 234 + 0x14]
09:38:40 INFO - eip = 0xb0ec2310 esp = 0x85bfa230 ebp = 0x85bfa258 ebx = 0xb609308c
09:38:40 INFO - esi = 0x93aaeec0 edi = 0x93aaeec0
09:38:40 INFO - Found by: call frame info
09:38:40 INFO - 5 libxul.so!MessageLoop::Run [message_loop.cc:d2144af8a3fe : 227 + 0x8]
09:38:40 INFO - eip = 0xb0ec2336 esp = 0x85bfa260 ebp = 0x85bfa288 ebx = 0xb609308c
09:38:40 INFO - esi = 0x93aaeec0 edi = 0x93aaeec0
09:38:40 INFO - Found by: call frame info
09:38:40 INFO - 6 libxul.so!nsThread::ThreadFunc [nsThread.cpp:d2144af8a3fe : 396 + 0x9]
09:38:40 INFO - eip = 0xb0befb92 esp = 0x85bfa290 ebp = 0x85bfa2d8 ebx = 0xb609308c
09:38:40 INFO - esi = 0x95e47240 edi = 0x93aaeec0
09:38:40 INFO - Found by: call frame info
09:38:40 INFO - 7 libnspr4.so!_pt_root [ptthread.c:d2144af8a3fe : 216 + 0x7]
09:38:40 INFO - eip = 0xb71ebe59 esp = 0x85bfa2e0 ebp = 0x85bfa328 ebx = 0xb71fd470
09:38:40 INFO - esi = 0x00000000 edi = 0x92085640
09:38:40 INFO - Found by: call frame info
09:38:40 INFO - 8 libpthread-2.15.so + 0x6d4c
09:38:40 INFO - eip = 0xb7727d4c esp = 0x85bfa330 ebp = 0x85bfa428 ebx = 0xb7738ff4
09:38:40 INFO - esi = 0x00000000 edi = 0x003d0f00
09:38:40 INFO - Found by: call frame info
09:38:40 INFO - 9 libc-2.15.so + 0xeeb8e
09:38:40 INFO - eip = 0xb7528b8e esp = 0x85bfa430 ebp = 0x00000000
09:38:40 INFO - Found by: previous frame's frame pointer
| Assignee | ||
Comment 18•9 years ago
|
||
pulsebot seems slow...
r+ to assertion change on IRC from padenot; tested locally
https://hg.mozilla.org/integration/mozilla-inbound/rev/405894fb1dd5
Flags: needinfo?(rjesup)
Comment 19•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
| Reporter | ||
Comment 20•9 years ago
|
||
I opened the ticket, and can confirm that this fix allows nightly compilation to succeed with webrtc disabled.
Thanks.
Updated•9 years ago
|
Status: RESOLVED → VERIFIED
Comment 21•9 years ago
|
||
Firefox m48/49 compiles with --enable-webrtc=no and present fix [comment 19].
"MOZ_WEBRTC": "",
"MOZ_WEBRTC_ASSERT_ALWAYS": "1",
"MOZ_WEBRTC_HARDWARE_AEC_NS": "",
"MOZ_WEBRTC_HAVE_ETHTOOL_SPEED_HI": "1",
"MOZ_WEBRTC_SIGNALING": "",
"MOZ_WEBRTC_X11_LIBS": [],
Firefox 50.0b11 with --enable-webrtc=no fails to compile with present fix [comment 19].
Steps to reproduce:
Pulled firefox-50.0b11.source.tar.xz, compiled with the same mozconfig as m48/49.
Actual results:
1:35.45 libdom_media_platforms_agnostic_gmp.a.desc
1:35.45 libmozgtk_stub.so
1:37.47 libsecurity_sandbox_linux_common.a.desc
1:42.90 In file included from /var/spool/makepkg/firefox/src/firefox-50.0b11/obj-x86_64-pc-linux-gnu/dom/media/webrtc/Unified_cpp_dom_media_webrt
c0.cpp:2:
1:42.90 In file included from /var/spool/makepkg/firefox/src/firefox-50.0b11/dom/media/webrtc/MediaEngineDefault.cpp:5:
1:42.90 In file included from /var/spool/makepkg/firefox/src/firefox-50.0b11/dom/media/webrtc/MediaEngineDefault.h:21:
1:42.90 /var/spool/makepkg/firefox/src/firefox-50.0b11/dom/media/webrtc/MediaEngineCameraVideoSource.h:14:10: fatal error: 'webrtc/video_engine/i
nclude/vie_capture.h' file not found
1:42.90 #include "webrtc/video_engine/include/vie_capture.h"
1:42.90 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1:43.20 libnetwerk_protocol_viewsource.a.desc
1:43.61 1 error generated.
1:43.62
1:43.63 In the directory /var/spool/makepkg/firefox/src/firefox-50.0b11/obj-x86_64-pc-linux-gnu/dom/media/webrtc
1:43.63 The following command failed to execute properly:
1:43.63 /usr/bin/ccache /usr/bin/clang++ -std=gnu++11 -o Unified_cpp_dom_media_webrtc0.o -c -I/var/spool/makepkg/firefox/src/firefox-50.0b11/obj-
x86_64-pc-linux-gnu/dist/stl_wrappers -I/var/spool/makepkg/firefox/src/firefox-50.0b11/obj-x86_64-pc-linux-gnu/dist/system_wrappers -include /var/
spool/makepkg/firefox/src/firefox-50.0b11/config/gcc_hidden.h -DDEBUG=1 -DTRACING=1 -DOS_POSIX=1 -DOS_LINUX=1 -DSTATIC_EXPORTABLE_JS_API -DMOZILLA
_INTERNAL_API -DIMPL_LIBXUL -I/var/spool/makepkg/firefox/src/firefox-50.0b11/dom/media/webrtc -I/var/spool/makepkg/firefox/src/firefox-50.0b11/obj
-x86_64-pc-linux-gnu/dom/media/webrtc -I/var/spool/makepkg/firefox/src/firefox-50.0b11/obj-x86_64-pc-linux-gnu/ipc/ipdl/_ipdlheaders -I/var/spool/
makepkg/firefox/src/firefox-50.0b11/ipc/chromium/src -I/var/spool/makepkg/firefox/src/firefox-50.0b11/ipc/glue -I/var/spool/makepkg/firefox/src/fi
refox-50.0b11/obj-x86_64-pc-linux-gnu/dist/include -I/usr/include/nspr -I/usr/include/nss -I/usr/include/pixman-1 -fPIC -DMOZILLA_CLIENT -include
/var/spool/makepkg/firefox/src/firefox-50.0b11/obj-x86_64-pc-linux-gnu/mozilla-config.h -MD -MP -MF .deps/Unified_cpp_dom_media_webrtc0.o.pp -Qunu
sed-arguments -D_FORTIFY_SOURCE=2 -Qunused-arguments -Wall -Wc++11-compat -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -
Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wc++11-compat-pedantic -Wc++14-compat -Wc++14-compat-pedantic -Wc++1z-compat -Wcla
ss-varargs -Wimplicit-fallthrough -Wloop-analysis -Wstring-conversion -Wthread-safety -Wno-invalid-offsetof -Wno-inline-new-delete -Wno-error=depr
ecated-declarations -Wno-error=array-bounds -Wno-unknown-warning-option -Wno-return-type-c-linkage -march=native -O3 -pipe -fdiagnostics-color -fs
tack-protector-strong -flto=full -Wl,-plugin-opt=O3 -fno-exceptions -fno-strict-aliasing -fno-rtti -ffunction-sections -fdata-sections -fno-except
ions -fno-math-errno -pthread -pipe -g0 -O3 -fno-omit-frame-pointer -Wno-error=attributes -Wno-error=shadow /var/spool/makepkg/firefox/src/firefox
-50.0b11/obj-x86_64-pc-linux-gnu/dom/media/webrtc/Unified_cpp_dom_media_webrtc0.cpp
1:43.63 make[5]: *** [/var/spool/makepkg/firefox/src/firefox-50.0b11/config/rules.mk:936: Unified_cpp_dom_media_webrtc0.o] Error 1
1:43.63 make[4]: *** [/var/spool/makepkg/firefox/src/firefox-50.0b11/config/recurse.mk:71: dom/media/webrtc/target] Error 2
1:43.63 make[4]: *** Waiting for unfinished jobs....
Firefox m50 compiles with enabled webrtc.
Comment 22•9 years ago
|
||
(In reply to altblitz from comment #21)
> Firefox 50.0b11 with --enable-webrtc=no fails to compile with present fix
Please file a new bug.
| Assignee | ||
Comment 23•9 years ago
|
||
This is covered (in current beta 50) by bug 1304490
You need to log in
before you can comment on or make changes to this bug.
Description
•