Bug 1255217: Don't require getUserMedia/cubeb device enumeration mapping if --disable-webrtc is set r=padenot

MozReview-Commit-ID: 1XtSXlhWn37